--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.2.0",
     "chartjs-plugin-zoom": "^2.0.0",
     "framer-motion": "^8.4.6",
+    "mdb-react-ui-kit": "5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
@@ -26,8 +27,8 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
-    "web-vitals": "^2.1.4",
-    "mdb-react-ui-kit": "5.1.0"
+    "sha1": "^1.1.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
