Updating Reading Service Queries

--- a/API Gateway/API-Gateway/src/main/resources/application.properties
+++ b/API Gateway/API-Gateway/src/main/resources/application.properties
@@ -1,9 +1,24 @@
 spring.application.name=api-gateway
 server.port=8765
 
-#Storing API-gateway in Eureka Server
+# Registering in Eureka Client
 eureka.client.service-url.default-zone = http://localhost:8761/eureka
+#Enabling Spring Cloud Discovery Locator
+spring.cloud.gateway.discovery.locator.enabled=true
 
+
+# Different Properties to enable CORS on API Gateway
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.default-filters=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=http://localhost:3000
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+
+
+
+#spring.cloud.gateway.globalcors.cors-configurations.[/**].
+#Storing API-gateway in Eureka Server
+#eureka.client.service-url.default-zone = http://localhost:8761/eureka
 #Read the purpose of API Gateway from File_1_API_Gateway.java in notes
 #Now, since we have created the API gateway, we want to access the microservices through the API gateway
 #Spring Cloud provides easy access to create URLs based on API Gateway, follow the below steps
