--- a/Services/Database Services/ReadService/src/main/resources/application.properties
+++ b/Services/Database Services/ReadService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=KnowledgeVerse-MySQL-Reading-Entity
 server.port=8400
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledgeverse
@@ -10,3 +10,6 @@ spring.datasource.password=
 # to connect to eureka server config server
 # If you want to register with eureka server, then add that link on next line
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+#logging.level.org.springframework=DEBUG
+
