Author Profile Alomost Completed

--- a/API Gateway/API-Gateway/src/main/resources/application.properties
+++ b/API Gateway/API-Gateway/src/main/resources/application.properties
@@ -15,6 +15,14 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
 
 
+#Enabling MultiPart Upload
+spring.servlet.multipart.enabled=true
+#Enabling Maximum File Size to be Allowed
+spring.servlet.multipart.maxFileSize=100MB
+#Enabling Minimum file Size required
+spring.servlet.multipart.fileSizeThreshold=1KB
+
+
 
 #spring.cloud.gateway.globalcors.cors-configurations.[/**].
 #Storing API-gateway in Eureka Server
