--- a/Services/Database Services/WriteService/src/main/resources/application.properties
+++ b/Services/Database Services/WriteService/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#Enabling MultiPart Upload
+spring.servlet.multipart.enabled=true
+#Enabling Maximum File Size to be Allowed
+spring.servlet.multipart.maxFileSize=100MB
+#Enabling Minimum file Size required
+spring.servlet.multipart.fileSizeThreshold=1KB
+
 
 spring.application.name=KnowledgeVerse-MySQL-Writing-Entity
 server.port=8600
@@ -8,6 +15,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/knowledgeverse
 spring.datasource.username=root
 spring.datasource.password=
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+
 
 #spring.main.allow-circular-references=true
 #logging.level.root=DEBUG
