--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "3d-force-graph": "^1.71.4",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
     "chartjs-plugin-zoom": "^2.0.0",
@@ -23,11 +24,14 @@
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph-3d": "^1.23.0",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.3.2",
     "sha1": "^1.1.1",
+    "three": "^0.152.2",
+    "three-spritetext": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
